Fix login/products form text that is cutoff

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,6 +7,7 @@
 .h2 {
     color: green;
     text-align: center;
+    padding-top: 20px;
 }
 
 .carousel {
@@ -84,6 +85,7 @@
 .dropdown-menu a {
 	font-family: Futura, Helvetica, Arial, sans-serif;
 }
+
 
 
 
